<menu 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/save"
        android:title="@string/ware_view_menu_save_title"
        app:showAsAction="always"
        android:icon="@drawable/ic_save"/>
    
    <item
        android:id="@+id/delete"
        android:title="@string/ware_view_menu_delete_title"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete"/>
    
    <item
        android:id="@+id/edit"
        android:title="@string/ware_view_menu_edit_title"
        app:showAsAction="always"
        android:icon="@drawable/ic_edit"/>
    
    <item
        android:id="@+id/copy"
        android:title="@string/ware_view_menu_copy_title"
        app:showAsAction="always"
        android:icon="@drawable/ic_copy"/>
</menu>
