<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:padding="@dimen/register_sv_padding"
    android:scrollbarThumbVertical="@null">

    <androidx.cardview.widget.CardView        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/register_cv_margin"
        android:padding="@dimen/register_cv_padding"
        app:cardCornerRadius="@dimen/register_cv_ccr"
        app:cardElevation="@dimen/register_cv_ce">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/register_ll_margin"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_til_marginTop">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/register_et_marginTop"
                    android:hint="@string/register_et_name_hint"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:paddingStart="@dimen/register_et_paddingStart"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_til_marginTop">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/register_et_marginTop"
                    android:hint="@string/loginAregister_et_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="@dimen/register_et_paddingStart"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/phone_number"
            android:maxLength="12"
            android:inputType="number"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="@dimen/register_til_marginTop">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/register_et_marginTop"
                    android:hint="@string/loginAregister_et_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="@dimen/register_et_paddingStart"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/register_btn_height"
                android:layout_margin="@dimen/register_btn_margin"
                android:background="@drawable/button_gradient"
                android:text="@string/register_btn_text"
                android:textColor="@android:color/white"
                android:textSize="@dimen/register_btn_textSize"/>

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_tv_marginTop"
                android:layout_marginBottom="@dimen/register_tv_marginBottom"
                android:gravity="center"
                android:text="@string/register_tv_text"
                android:textColor="@color/primary"
                android:textSize="@dimen/register_tv_textSize"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>
