<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center"
    android:padding="@dimen/login_rl_padding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_cv_height"
            android:layout_margin="@dimen/login_cv_margin"
            android:padding="@dimen/login_cv_padding"
            app:cardCornerRadius="@dimen/login_cv_ccr"
            app:cardElevation="@dimen/login_cv_ce">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/login_ll_margin"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_til_marginTop">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/login_et_marginTop"
                        android:hint="@string/loginAregister_et_email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="@dimen/login_et_paddingStart"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_til_marginTop"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/login_et_marginTop"
                        android:hint="@string/loginAregister_et_password_hint"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingStart="@dimen/login_et_paddingStart"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_btn_height"
                    android:layout_margin="@dimen/login_btn_margin"
                    android:background="@drawable/button_gradient"
                    android:text="@string/login_btn_text"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/login_btn_textSize"/>

                <TextView
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_tv_marginTop"
                    android:gravity="center"
                    android:text="@string/login_tv_text"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/login_tv_textSize"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <ImageView
        android:id="@+id/profile"
        android:layout_width="@dimen/login_iv_width"
        android:layout_height="@dimen/login_iv_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_iv_marginTop"
        android:background="@drawable/round_background"
        android:padding="@dimen/login_iv_padding"
        android:src="@drawable/ic_app"/>

</RelativeLayout>
