<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ware_view_ll_margin"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ware_view_et_model"
                    android:tooltipText="Name"
                    android:drawableStart="@drawable/ic_model"
                    android:drawablePadding="@dimen/drawablePadding"
                    android:hint="@string/ware_view_et_model_hint"
                    android:layout_weight="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ware_view_et_color"
                    android:drawableStart="@drawable/ic_color"
                    android:drawablePadding="@dimen/drawablePadding"
                    android:tooltipText="Name"
                    android:hint="@string/ware_view_et_color_hint"
                    android:layout_weight="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ware_view_et_prise"
                    android:drawableStart="@drawable/ic_cash"
                    android:drawablePadding="@dimen/drawablePadding"
                    android:tooltipText="Number"
                    android:inputType="number"
                    android:hint="@string/ware_view_et_prise_hint"
                    android:layout_weight="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ware_view_et_date"
                    android:drawableStart="@drawable/ic_date"
                    android:drawablePadding="@dimen/drawablePadding"
                    android:tooltipText="Name"
                    android:hint="@string/ware_view_et_date_hint"
                    android:layout_weight="1"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ware_view_et_desc"
                    android:drawableStart="@drawable/ic_desc"
                    android:drawablePadding="@dimen/drawablePadding"
                    android:tooltipText="Name"
                    android:hint="@string/ware_view_et_desc_hint"
                    android:layout_weight="1"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ware_view_abl_height"
        android:fitsSystemWindows="true"
        android:id="@+id/ware_view_abl"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleMarginStart="@dimen/ware_view_ctbl_ex_title_margin_start"
            app:expandedTitleMarginEnd="@dimen/ware_view_ctbl_ex_title_margin_end"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
            <!--app:contentScrim="@color/primary"-->
            

            <ImageView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/ware_view_image"
                android:drawable="@color/primary"
                app:layout_collapseMode="parallax"
                android:scaleType="fitXY"
                android:fitsSystemWindows="true"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
