<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dialog_cl_width"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/custom_ware_cv_cardCornerRadius"
        app:cardElevation="@dimen/custom_ware_cv_cardElevation">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/setting_re_padding"
            android:gravity="center">
            
            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@android:drawable/ic_delete"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/custom_dialog_pass_iv_marginTop"
                android:layout_marginRight="@dimen/custom_dialog_pass_iv_marginRight"
                android:id="@+id/custom_dialog_pass_iv_close"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/custom_dialog_pass_tv_addPass"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:layout_below="@id/custom_dialog_pass_iv_close"
                android:id="@+id/testTextView1"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/custom_dialog_pass_til_errorPass"
                android:layout_below="@id/testTextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="@dimen/register_til_marginTop">

                <EditText
                    android:ems="10"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/custom_dialog_pass_et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/custom_dialog_pass_et_marginTop"
                    android:hint="@string/loginAregister_et_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="@dimen/register_et_paddingStart"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/custom_dialog_pass_btn_check"
                android:layout_below="@id/custom_dialog_pass_til_errorPass"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_dialog_pass_btn_height"
                android:layout_margin="@dimen/custom_dialog_pass_btn_margin"
                android:background="@drawable/button_gradient"
                android:text="@string/custom_dialog_pass_btn_text"
                android:textColor="@android:color/white"
                android:textSize="@dimen/custom_dialog_pass_btn_textSize"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
